crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__recovery__class_body_with_formatter_ignore.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
class Demo {
  fun before() {}
  // @formatter:off
  fun raw(){ }
  // @formatter:on
  /* member */ +
}

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    ClassDeclaration
      ModifierList
      ModifierList
      ClassKw "class" @ 0..5 trailing=[Whitespace " "]
      Name
        Identifier "Demo" @ 6..10 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 11..12
        ClassMemberList
          ClassMemberDeclaration
            FunctionDeclaration
              ModifierList
              ModifierList
              FunKw "fun" @ 15..18 leading=[Newline "\n", Whitespace "  "] trailing=[Whitespace " "]
              ModifierList
              Name
                Identifier "before" @ 19..25
              ValueParameterList
                LParen "(" @ 25..26
                ValueParameterSeparatedList
                RParen ")" @ 26..27 trailing=[Whitespace " "]
              BlockBody
                Block
                  LBrace "{" @ 28..29
                  BlockItemList
                  RBrace "}" @ 29..30
          ClassMemberDeclaration
            FunctionDeclaration
              ModifierList
              ModifierList
              FunKw "fun" @ 53..56 leading=[Newline "\n", Whitespace "  ", LineComment "// @formatter:off", Newline "\n", Whitespace "  "] trailing=[Whitespace " "]
              ModifierList
              Name
                Identifier "raw" @ 57..60
              ValueParameterList
                LParen "(" @ 60..61
                ValueParameterSeparatedList
                RParen ")" @ 61..62
              BlockBody
                Block
                  LBrace "{" @ 62..63 trailing=[Whitespace " "]
                  BlockItemList
                  RBrace "}" @ 64..65
          BogusClassMember
            Plus "+" @ 100..101 leading=[Newline "\n", Whitespace "  ", LineComment "// @formatter:on", Newline "\n", Whitespace "  ", BlockComment "/* member */", Whitespace " "]
        RBrace "}" @ 102..103 leading=[Newline "\n"]
  Eof "" @ 104..104 leading=[Newline "\n"]

diagnostics:
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=100..101 message="unexpected orphan class member"

diagnostics:
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(100), end: TextSize(101) }) message=unexpected orphan class member
