crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__recovery__collection_and_index_lists.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
fun demo(values: List<Int>) { [/* collection */ , value]
values[/* index */ , 0] }

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    FunctionDeclaration
      ModifierList
      ModifierList
      FunKw "fun" @ 0..3 trailing=[Whitespace " "]
      ModifierList
      Name
        Identifier "demo" @ 4..8
      ValueParameterList
        LParen "(" @ 8..9
        ValueParameterSeparatedList
          ValueParameter
            ModifierList
            Name
              Identifier "values" @ 9..15
            Colon ":" @ 15..16 trailing=[Whitespace " "]
            TypeReference
              UserType
                UserTypeSegmentList
                  UserTypeSegment
                    Identifier "List" @ 17..21
                    TypeArgumentList
                      Lt "<" @ 21..22
                      TypeProjectionSeparatedList
                        TypeReference
                          UserType
                            UserTypeSegmentList
                              UserTypeSegment
                                Identifier "Int" @ 22..25
                      Gt ">" @ 25..26
        RParen ")" @ 26..27 trailing=[Whitespace " "]
      BlockBody
        Block
          LBrace "{" @ 28..29 trailing=[Whitespace " "]
          BlockItemList
            Statement
              ExpressionStatement
                CollectionLiteralExpression
                  LBracket "[" @ 30..31 trailing=[BlockComment "/* collection */", Whitespace " "]
                  ValueArgumentEntryList
                    Comma "," @ 48..49 trailing=[Whitespace " "]
                    BogusValueArgument
                    ValueArgument
                      ValueArgumentPrefixList
                      NameExpression
                        Identifier "value" @ 50..55
                  RBracket "]" @ 55..56
              TerminatorList
            Statement
              ExpressionStatement
                IndexExpression
                  NameExpression
                    Identifier "values" @ 57..63 leading=[Newline "\n"]
                  LBracket "[" @ 63..64 trailing=[BlockComment "/* index */", Whitespace " "]
                  ValueArgumentEntryList
                    Comma "," @ 76..77 trailing=[Whitespace " "]
                    BogusValueArgument
                    ValueArgument
                      ValueArgumentPrefixList
                      LiteralExpression
                        IntegerLiteral "0" @ 78..79
                  RBracket "]" @ 79..80 trailing=[Whitespace " "]
              TerminatorList
          RBrace "}" @ 81..82
  Eof "" @ 83..83 leading=[Newline "\n"]

diagnostics:
  code=kotlin.parse.expected_syntax severity=Error stage=Parser range=50..55 message="expected list item"
  code=kotlin.parse.expected_syntax severity=Error stage=Parser range=78..79 message="expected list item"

diagnostics:
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(50), end: TextSize(55) }) message=expected list item
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(78), end: TextSize(79) }) message=expected list item
