crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__recovery__control_flow_missing_children.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
fun demo(flag: Boolean) { label@
do { work() }
when (flag)
}

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    FunctionDeclaration
      ModifierList
      ModifierList
      FunKw "fun" @ 0..3 trailing=[Whitespace " "]
      ModifierList
      CallableName
        CallableNamePartList
          Name
            Identifier "demo" @ 4..8
      ValueParameterList
        LParen "(" @ 8..9
        ValueParameterSeparatedList
          ValueParameter
            ModifierList
            Name
              Identifier "flag" @ 9..13
            Colon ":" @ 13..14 trailing=[Whitespace " "]
            TypeReference
              UserType
                UserTypeSegmentList
                  Identifier "Boolean" @ 15..22
        RParen ")" @ 22..23 trailing=[Whitespace " "]
      Block
        LBrace "{" @ 24..25 trailing=[Whitespace " "]
        BlockItemList
          Statement
            ExpressionStatement
              NameExpression
                Identifier "label" @ 26..31
                At "@" @ 31..32
                DoWhileStatement
                  DoKw "do" @ 33..35 leading=[Newline "\n"] trailing=[Whitespace " "]
                  Block
                    LBrace "{" @ 36..37 trailing=[Whitespace " "]
                    BlockItemList
                      Statement
                        ExpressionStatement
                          CallExpression
                            NameExpression
                              Identifier "work" @ 38..42
                            TypeArgumentListList
                            ValueArgumentList
                              LParen "(" @ 42..43
                              ValueArgumentEntryList
                              RParen ")" @ 43..44 trailing=[Whitespace " "]
                            LambdaExpressionList
                        TerminatorList
                    RBrace "}" @ 45..46
            TerminatorList
          Statement
            ExpressionStatement
              WhenExpression
                WhenKw "when" @ 47..51 leading=[Newline "\n"] trailing=[Whitespace " "]
                WhenSubject
                  LParen "(" @ 52..53
                  NameExpression
                    Identifier "flag" @ 53..57
                  RParen ")" @ 57..58
                WhenEntryList
            TerminatorList
        RBrace "}" @ 59..60 leading=[Newline "\n"]
  Eof "" @ 61..61 leading=[Newline "\n"]

diagnostics:
  code=kotlin.parse.expected_syntax severity=Error stage=Parser range=47..51 message="expected 'while' after do body"
  code=kotlin.parse.expected_syntax severity=Error stage=Parser range=59..60 message="expected '{' after when subject"

diagnostics:
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(47), end: TextSize(51) }) message=expected 'while' after do body
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(59), end: TextSize(60) }) message=expected '{' after when subject
