crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__recovery__definitely_non_nullable_bang.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
fun <T> definitelyNonNullable(value: T!!): T = value

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    FunctionDeclaration
      ModifierList
      ModifierList
      FunKw "fun" @ 0..3 trailing=[Whitespace " "]
      TypeParameterList
        Lt "<" @ 4..5
        TypeParameterSeparatedList
          TypeParameter
            ModifierList
            Name
              Identifier "T" @ 5..6
        Gt ">" @ 6..7 trailing=[Whitespace " "]
      ModifierList
      Name
        Identifier "definitelyNonNullable" @ 8..29
      ValueParameterList
        LParen "(" @ 29..30
        ValueParameterSeparatedList
          ValueParameter
            ModifierList
            Name
              Identifier "value" @ 30..35
            Colon ":" @ 35..36 trailing=[Whitespace " "]
            TypeReference
              DefinitelyNonNullableType
                BangDefinitelyNonNullableType
                  UserType
                    UserTypeSegmentList
                      UserTypeSegment
                        AnnotationList
                        Name
                          Identifier "T" @ 37..38
                  BangBang "!!" @ 38..40
        RParen ")" @ 40..41
      Colon ":" @ 41..42 trailing=[Whitespace " "]
      TypeReference
        UserType
          UserTypeSegmentList
            UserTypeSegment
              AnnotationList
              Name
                Identifier "T" @ 43..44 trailing=[Whitespace " "]
      ExpressionBody
        Assign "=" @ 45..46 trailing=[Whitespace " "]
        NameExpression
          Identifier "value" @ 47..52
  Eof "" @ 53..53 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
