crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__recovery__else_without_branch.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
fun demo(flag: Boolean) { if (flag) yes() else }

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    FunctionDeclaration
      ModifierList
      ModifierList
      FunKw "fun" @ 0..3 trailing=[Whitespace " "]
      ModifierList
      Name
        Identifier "demo" @ 4..8
      ValueParameterList
        LParen "(" @ 8..9
        ValueParameterSeparatedList
          ValueParameter
            ModifierList
            Name
              Identifier "flag" @ 9..13
            Colon ":" @ 13..14 trailing=[Whitespace " "]
            TypeReference
              UserType
                UserTypeSegmentList
                  UserTypeSegment
                    AnnotationList
                    Name
                      Identifier "Boolean" @ 15..22
        RParen ")" @ 22..23 trailing=[Whitespace " "]
      BlockBody
        Block
          LBrace "{" @ 24..25 trailing=[Whitespace " "]
          BlockItemList
            Statement
              ExpressionStatement
                IfExpression
                  IfKw "if" @ 26..28 trailing=[Whitespace " "]
                  ParenthesizedExpression
                    LParen "(" @ 29..30
                    NameExpression
                      Identifier "flag" @ 30..34
                    RParen ")" @ 34..35 trailing=[Whitespace " "]
                  CallExpression
                    NameExpression
                      Identifier "yes" @ 36..39
                    TypeArgumentListList
                    ValueArgumentList
                      LParen "(" @ 39..40
                      ValueArgumentEntryList
                      RParen ")" @ 40..41 trailing=[Whitespace " "]
                    LambdaExpressionList
                  ElseKw "else" @ 42..46 trailing=[Whitespace " "]
                  ErrorNode
              TerminatorList
          RBrace "}" @ 47..48
  Eof "" @ 49..49 leading=[Newline "\n"]

diagnostics:
  code=kotlin.parse.expected_syntax severity=Error stage=Parser range=47..48 message="expected expression"

diagnostics:
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(47), end: TextSize(48) }) message=expected expression
