crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__recovery__explicit_backing_field.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
val value: Int field = /* backing */ compute()

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    PropertyDeclaration
      ModifierList
      ModifierList
      ValKw "val" @ 0..3 trailing=[Whitespace " "]
      Name
        Identifier "value" @ 4..9
      Colon ":" @ 9..10 trailing=[Whitespace " "]
      TypeReference
        UserType
          UserTypeSegmentList
            UserTypeSegment
              AnnotationList
              Name
                Identifier "Int" @ 11..14 trailing=[Whitespace " "]
      PropertyBodyMemberList
        ExplicitBackingField
          Identifier "field" @ 15..20 trailing=[Whitespace " "]
          Assign "=" @ 21..22 trailing=[Whitespace " ", BlockComment "/* backing */", Whitespace " "]
          CallExpression
            NameExpression
              Identifier "compute" @ 37..44
            TypeArgumentListList
            ValueArgumentList
              LParen "(" @ 44..45
              ValueArgumentEntryList
              RParen ")" @ 45..46
            LambdaExpressionList
  Eof "" @ 47..47 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
