crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__recovery__for_partial_header.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
fun demo(items: List<String>) { for (item in items print(item) }

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    FunctionDeclaration
      ModifierList
      ModifierList
      FunKw "fun" @ 0..3 trailing=[Whitespace " "]
      ModifierList
      CallableName
        CallableNamePartList
          Name
            Identifier "demo" @ 4..8
      ValueParameterList
        LParen "(" @ 8..9
        ValueParameterSeparatedList
          ValueParameter
            ModifierList
            Name
              Identifier "items" @ 9..14
            Colon ":" @ 14..15 trailing=[Whitespace " "]
            TypeReference
              UserType
                UserTypeSegmentList
                  Identifier "List" @ 16..20
                  TypeArgumentList
                    Lt "<" @ 20..21
                    TypeProjectionList
                      TypeProjectionSeparatedList
                        TypeArgument
                          TypeProjection
                            TypeReference
                              UserType
                                UserTypeSegmentList
                                  Identifier "String" @ 21..27
                    Gt ">" @ 27..28
        RParen ")" @ 28..29 trailing=[Whitespace " "]
      Block
        LBrace "{" @ 30..31 trailing=[Whitespace " "]
        BlockItemList
          Statement
            ExpressionStatement
              ForStatement
                ForKw "for" @ 32..35 trailing=[Whitespace " "]
                LParen "(" @ 36..37
                NameExpression
                  Identifier "item" @ 37..41 trailing=[Whitespace " "]
                InKw "in" @ 42..44 trailing=[Whitespace " "]
                BinaryExpression
                  NameExpression
                    Identifier "items" @ 45..50 trailing=[Whitespace " "]
                  Identifier "print" @ 51..56
                  ParenthesizedExpression
                    LParen "(" @ 56..57
                    NameExpression
                      Identifier "item" @ 57..61
                    RParen ")" @ 61..62 trailing=[Whitespace " "]
                ErrorNode
            TerminatorList
        RBrace "}" @ 63..64
  Eof "" @ 65..65 leading=[Newline "\n"]

diagnostics:
  code=kotlin.parse.expected_syntax severity=Error stage=Parser range=63..64 message="expected ')' after for header"
  code=kotlin.parse.expected_syntax severity=Error stage=Parser range=63..64 message="expected expression"

diagnostics:
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(63), end: TextSize(64) }) message=expected ')' after for header
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(63), end: TextSize(64) }) message=expected expression
